# libxml2

./: .gitignore  CMakeLists.txt  libxml.h
doc/: CMakeLists.txt
doc/devhelp/: CMakeLists.txt
doc/examples/: CMakeLists.txt
example/: CMakeLists.txt
include/: CMakeLists.txt
include/libxml/: CMakeLists.txt
python/: CMakeLists.txt
python/tests/: CMakeLists.txt
xstc/: CMakeLists.txt
